title dark mode fixed

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -84,6 +84,6 @@ p {
 
 .container {
   max-width: 136rem;
-  padding: 0 2rem;
+  padding: 0 6rem;
   margin: 0 auto;
 }
