--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -17,9 +17,9 @@
     }
 
     &.sticky .header__wrapper nav .nav-links .dropdown-parent label {
-      color: $clr-light;
+      color: #fff;
       &::before {
-        background-color: $clr-light;
+        background-color: #fff;
       }
     }
   }
@@ -67,7 +67,7 @@
       }
 
       .nav-links {
-        color: $clr-light;
+        color: #fff;
         padding-top: 5rem;
         margin-left: 1rem;
 
@@ -111,7 +111,7 @@
                     width: 6px;
                     display: inline-block;
                     aspect-ratio: 1/1;
-                    background-color: $clr-light;
+                    background-color: #fff;
                     scale: 0;
                     border-radius: 50%;
                     transition: all 0.2s ease;
@@ -119,7 +119,7 @@
                 }
                 &:hover {
                   a::before {
-                    background-color: $clr-light;
+                    background-color: #fff;
                     scale: 1;
                   }
                 }
@@ -152,7 +152,7 @@
                     aspect-ratio: 1/1;
                     top: 8px;
                     left: -10px;
-                    background-color: $clr-light;
+                    background-color: #fff;
                     scale: 0;
                     border-radius: 50%;
                     transition: all 0.2s ease;
@@ -180,7 +180,7 @@
             left: -12px;
             top: 35px;
             aspect-ratio: 1/1;
-            background-color: $clr-light;
+            background-color: #fff;
             scale: 0;
             border-radius: 50%;
             transition: all 0.2s ease;
@@ -212,7 +212,7 @@
             cursor: pointer;
           }
           a {
-            color: $clr-light;
+            color: #fff;
           }
           .nav-links-dropdown {
             position: relative;
@@ -269,7 +269,7 @@
         content: "";
         height: 2px;
         width: 40px;
-        background-color: $clr-light;
+        background-color: #fff;
         display: block;
         transform-origin: center;
       }
@@ -303,7 +303,7 @@
         border-bottom: 2px solid $clr-primary;
         font-size: 2rem;
         outline: none;
-        color: $clr-light;
+        color: #fff;
         background-color: transparent;
         width: 100%;
         padding-bottom: 5px;
@@ -344,7 +344,7 @@
         position: absolute;
         height: 2px;
         width: 100%;
-        background-color: $clr-light;
+        background-color: #fff;
         opacity: 100;
         left: 0;
         top: 0;
@@ -393,7 +393,7 @@
     .search__btn {
       cursor: pointer;
       i {
-        color: $clr-light;
+        color: #fff;
         font-size: 2.5rem;
       }
     }
