--- a/scss/page/_home.scss
+++ b/scss/page/_home.scss
@@ -562,7 +562,7 @@
       border-top-left-radius: 0.5rem;
       border-bottom-left-radius: 1.5rem;
       border-bottom-right-radius: 0.5rem;
-      color: $clr-light;
+      color: #fff;
       background-color: $clr-primary;
       font-weight: 500;
       i {
@@ -571,6 +571,7 @@
       &:hover {
         border: 2px solid $clr-primary;
         background-color: transparent;
+        color: $clr-primary;
         transition: all 0.5s ease;
         i {
           transform: translateX(30%);
@@ -702,7 +703,7 @@
       border-top-left-radius: 0.5rem;
       border-bottom-left-radius: 1.5rem;
       border-bottom-right-radius: 0.5rem;
-      color: $clr-light;
+      color: #fff;
       background-color: $clr-primary;
       font-weight: 500;
       i {
@@ -711,6 +712,7 @@
       &:hover {
         border: 2px solid $clr-primary;
         background-color: transparent;
+        color: $clr-primary;
         transition: all 0.5s ease;
         i {
           transform: translateX(30%);
@@ -956,7 +958,7 @@
       border-top-left-radius: 0.5rem;
       border-bottom-left-radius: 1.5rem;
       border-bottom-right-radius: 0.5rem;
-      color: $clr-light;
+      color: #fff;
       background-color: $clr-primary;
       font-weight: 500;
       i {
@@ -965,6 +967,7 @@
       &:hover {
         border: 2px solid $clr-primary;
         background-color: transparent;
+        color: $clr-primary;
         transition: all 0.5s ease;
         i {
           transform: translateX(30%);
@@ -1067,7 +1070,7 @@
       border-top-left-radius: 0.5rem;
       border-bottom-left-radius: 1.5rem;
       border-bottom-right-radius: 0.5rem;
-      color: $clr-light;
+      color: #fff;
       background-color: $clr-primary;
       font-weight: 500;
       i {
@@ -1076,6 +1079,7 @@
       &:hover {
         border: 2px solid $clr-primary;
         background-color: transparent;
+        color: $clr-primary;
         transition: all 0.5s ease;
         i {
           transform: translateX(30%);
@@ -1096,6 +1100,7 @@
   }
 
   &__cards {
+    box-shadow: 0px 0px 10px 0px rgba(6, 9, 34, 0.1);
     border: 1px solid $clr-primary;
     padding-top: 5rem;
     margin-bottom: 3rem;
@@ -1234,11 +1239,12 @@
       border-top-left-radius: 0.5rem;
       border-bottom-left-radius: 1.5rem;
       border-bottom-right-radius: 0.5rem;
-      color: $clr-light;
+      color: $clr-primary;
       background-color: transparent;
       font-weight: 500;
       &:hover {
         background-color: $clr-primary;
+        color: #fff;
         transition: all 0.5s ease;
       }
     }
